Agent and UI updates